--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Your Title
+title: xxxxxx
 description: > # this means to ignore newlines until "baseurl:"
   Your description
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "Your-Link.github.io" # the base hostname & protocol for your site
+url: "https://mimanno.github.io"
+baseurl: "/event-jekyll-theme"
 # Build settings
 markdown: kramdown
 
