--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: xxxxxx
+title: ICKG 2026
 description: > # this means to ignore newlines until "baseurl:"
   Your description
 url: "https://mimanno.github.io"
